--- a/ECE564_HW/Base.lproj/Main.storyboard
+++ b/ECE564_HW/Base.lproj/Main.storyboard
@@ -62,7 +62,6 @@
                                     <outlet property="pDescriptionLabel" destination="J65-jM-uhI" id="0sT-G8-z4d"/>
                                     <outlet property="pImageView" destination="ueT-i3-0c6" id="1GP-G1-Y1b"/>
                                     <outlet property="pNameLabel" destination="cGA-G8-qOU" id="AvX-de-CPf"/>
-                                    <segue destination="BYZ-38-t0r" kind="show" identifier="editSegue" id="w3s-cE-VZP"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -80,6 +79,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="kUs-8j-LRn" id="TNu-88-TLg"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="editSegue" id="Yab-Ug-X7D"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="X0Y-Pm-pEN" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -349,12 +349,12 @@
                     <navigationItem key="navigationItem" title="New DukePerson" id="6un-IE-0bv">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="t28-3Q-6cf">
                             <connections>
-                                <segue destination="6I2-2c-wgp" kind="unwind" unwindAction="returnFromNewPersonWithSegue:" id="6ek-QU-Htm"/>
+                                <segue destination="6I2-2c-wgp" kind="unwind" identifier="cancelSegue" unwindAction="returnFromNewPersonWithSegue:" id="hn1-n2-qeZ"/>
                             </connections>
                         </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Item" id="nFv-MG-rIr">
                             <connections>
-                                <segue destination="6I2-2c-wgp" kind="unwind" unwindAction="returnFromNewPersonWithSegue:" id="AwN-bz-gIe"/>
+                                <action selector="isPressed:" destination="BYZ-38-t0r" id="oAa-eE-Sca"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -373,6 +373,7 @@
                         <outlet property="saveButton" destination="nFv-MG-rIr" id="dkI-wX-sXC"/>
                         <outlet property="teamInput" destination="EMW-Fs-Lh4" id="hMP-nn-zKR"/>
                         <outlet property="userImage" destination="Nit-0I-efI" id="T5z-9y-GgU"/>
+                        <segue destination="6I2-2c-wgp" kind="unwind" identifier="returnSegue" unwindAction="returnFromNewPersonWithSegue:" id="ztC-2g-LnN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -418,7 +419,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="w3s-cE-VZP"/>
+        <segue reference="Yab-Ug-X7D"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="person.crop.circle.fill.badge.exclam" catalog="system" width="128" height="101"/>
