--- a/ECE564_HW/Base.lproj/Main.storyboard
+++ b/ECE564_HW/Base.lproj/Main.storyboard
@@ -86,7 +86,7 @@
             </objects>
             <point key="canvasLocation" x="301.60000000000002" y="84.107946026986511"/>
         </scene>
-        <!--New DukePerson-->
+        <!--Information View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="InformationViewController" customModule="ECE564_HW" customModuleProvider="target" sceneMemberID="viewController">
@@ -303,50 +303,29 @@
                                 </constraints>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="VFW-Cc-L0k">
-                                <rect key="frame" x="151.5" y="458" width="72" height="60"/>
+                                <rect key="frame" x="137.5" y="463" width="100" height="100"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.crop.circle.fill.badge.exclam" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Nit-0I-efI">
-                                        <rect key="frame" x="0.0" y="0.5" width="72" height="59"/>
+                                        <rect key="frame" x="0.0" y="0.5" width="100" height="99"/>
                                         <color key="tintColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="72" id="g4y-5o-mXK"/>
-                                            <constraint firstAttribute="height" constant="60" id="qEb-OD-iMF"/>
+                                            <constraint firstAttribute="width" constant="100" id="g4y-5o-mXK"/>
+                                            <constraint firstAttribute="height" constant="100" id="qEb-OD-iMF"/>
                                         </constraints>
                                     </imageView>
                                 </subviews>
                             </stackView>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="E28-hR-imV">
-                                <rect key="frame" x="43" y="538" width="289" height="20.5"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="The output goes here." lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lf1-fm-hH0">
-                                        <rect key="frame" x="0.0" y="0.0" width="289" height="20.5"/>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <constraints>
-                                    <constraint firstItem="Lf1-fm-hH0" firstAttribute="top" secondItem="E28-hR-imV" secondAttribute="top" id="AcM-bz-ubv"/>
-                                    <constraint firstAttribute="trailing" secondItem="Lf1-fm-hH0" secondAttribute="trailing" id="PU3-AL-3sL"/>
-                                    <constraint firstItem="Lf1-fm-hH0" firstAttribute="leading" secondItem="E28-hR-imV" secondAttribute="leading" id="Xo5-Ig-KTy"/>
-                                    <constraint firstAttribute="bottom" secondItem="Lf1-fm-hH0" secondAttribute="bottom" id="ekD-RH-mRE"/>
-                                </constraints>
-                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="E28-hR-imV" firstAttribute="top" secondItem="VFW-Cc-L0k" secondAttribute="bottom" constant="20" id="1WM-d3-4sk"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="E28-hR-imV" secondAttribute="trailing" constant="43" id="9hu-ss-bgE"/>
-                            <constraint firstItem="VFW-Cc-L0k" firstAttribute="top" secondItem="jVX-gb-rAL" secondAttribute="bottom" constant="20" id="BNd-co-Agz"/>
+                            <constraint firstItem="VFW-Cc-L0k" firstAttribute="top" secondItem="jVX-gb-rAL" secondAttribute="bottom" constant="25" id="BNd-co-Agz"/>
                             <constraint firstItem="jVX-gb-rAL" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="30" id="Ctk-2N-phm"/>
                             <constraint firstItem="VFW-Cc-L0k" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lpU-dm-Cho"/>
                             <constraint firstItem="jVX-gb-rAL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qRK-a0-kKa"/>
-                            <constraint firstItem="E28-hR-imV" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="zyr-vW-NJ6"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="New DukePerson" id="6un-IE-0bv">
+                    <navigationItem key="navigationItem" id="6un-IE-0bv">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="t28-3Q-6cf">
                             <connections>
                                 <segue destination="6I2-2c-wgp" kind="unwind" identifier="cancelSegue" unwindAction="returnFromNewPersonWithSegue:" id="hn1-n2-qeZ"/>
@@ -368,7 +347,7 @@
                         <outlet property="hobbyInput" destination="Xz1-7I-OxZ" id="E7c-JD-ajg"/>
                         <outlet property="languageInput" destination="IJM-Sr-dCN" id="lxC-Pq-pLS"/>
                         <outlet property="lastNameInput" destination="97w-TC-cX1" id="sfO-Rx-eYP"/>
-                        <outlet property="outputLabel" destination="Lf1-fm-hH0" id="gHg-P9-elm"/>
+                        <outlet property="naviBar" destination="6un-IE-0bv" id="V6l-hb-23E"/>
                         <outlet property="roleInput" destination="gLK-H1-AWr" id="nW4-1v-Iak"/>
                         <outlet property="saveButton" destination="nFv-MG-rIr" id="dkI-wX-sXC"/>
                         <outlet property="teamInput" destination="EMW-Fs-Lh4" id="hMP-nn-zKR"/>
@@ -419,7 +398,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Yab-Ug-X7D"/>
+        <segue reference="nST-3K-MGW"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="person.crop.circle.fill.badge.exclam" catalog="system" width="128" height="101"/>
