--- a/ECE564_HW/Base.lproj/Main.storyboard
+++ b/ECE564_HW/Base.lproj/Main.storyboard
@@ -24,14 +24,14 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ueT-i3-0c6">
-                                            <rect key="frame" x="0.0" y="-28" width="120" height="120.5"/>
+                                            <rect key="frame" x="0.0" y="-18" width="100" height="100.5"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="ueT-i3-0c6" secondAttribute="height" multiplier="1:1" id="A3h-3g-9yP"/>
-                                                <constraint firstAttribute="width" constant="120" id="dLy-Dy-K2a"/>
+                                                <constraint firstAttribute="width" constant="100" id="dLy-Dy-K2a"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGA-G8-qOU">
-                                            <rect key="frame" x="123" y="13" width="233" height="20"/>
+                                            <rect key="frame" x="103" y="13" width="253" height="20"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="20" id="eCm-k1-USo"/>
                                             </constraints>
@@ -40,7 +40,7 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="wordWrap" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="J65-jM-uhI">
-                                            <rect key="frame" x="125" y="35" width="232" height="16.5"/>
+                                            <rect key="frame" x="105" y="35" width="252" height="16.5"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -417,7 +417,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="TEj-Rn-j9K"/>
+        <segue reference="nST-3K-MGW"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="person.crop.circle.fill.badge.exclam" catalog="system" width="128" height="101"/>
